feat: integrate TMDb API for enriched movie details and streaming providers

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ VITE_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id_here
 VITE_FIREBASE_APP_ID=your_app_id_here
 VITE_FIREBASE_MEASUREMENT_ID=your_measurement_id_here
 VITE_GEMINI_API_KEY=your_gemini_api_key_here
+VITE_TMDB_API_KEY=your_tmdb_api_key_here
+VITE_TMDB_READ_ACCESS_TOKEN=your_tmdb_read_access_token_here
